# foo

./: CMakeLists.txt
include/foo/: add.h
src/: add.cpp  foo.cpp
